--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ application/config/database.php
 application/config/config.php
 application/ci_session/PHPSESSID7327321a8fda79e77a95e0d9da47898a09436c2d
 application/config/database.php
+application/config/database.php
+application/config/config.php
+database.php
