--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ application/config/database.php
 application/config/database.php
 application/config/config.php
 database.php
+application/config/database.php
