--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ application/config/database.php
 application/config/config.php
 database.php
 application/config/database.php
+application/config/database.php
